
[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.27.1]]
==== 1.27.1 - YYYY/MM/DD

[float]
===== Bug fixes
* Fixing missing Micrometer metrics in Spring boot due to premature initialization - {pull}2255[#2255]
* Fixing hostname trimming of FQDN too aggressive - {pull}2286[#2286]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.27.0]]
==== 1.27.0 - 2021/11/15

[float]
===== Potentially breaking changes
* `transaction_ignore_urls` now relies on full request URL path - {pull}2146[#2146]
** On a typical application server like Tomcat, deploying an `app.war` application to the non-ROOT context makes it accessible with `http://localhost:8080/app/`
** Ignoring the whole webapp through `/app/*` was not possible until now.
** Existing configuration may need to be updated to include the deployment context, thus for example `/static/*.js` used to
exclude known static files in all applications might be changed to `/app/static/*.js` or `*/static/*.js`.
** It only impacts prefix patterns due to the additional context path in pattern.
** It does not impact deployment within the `ROOT` context like Spring-boot which do not have such context path prefix.
* The metrics `transaction.duration.sum.us`, `transaction.duration.count` and `transaciton.breakdown.count` are no longer recorded - {pull}2194[#2194]
* Automatic hostname discovery mechanism had changed, so the resulted `host.name` and `host.hostname` in events reported
by the agent may be different. This was done in order to improve the integration with host metrics in the APM UI.

[float]
===== Features
* Improved capturing of logged exceptions when using Log4j2 - {pull}2139[#2139]
* Update to async-profiler 1.8.7 and set configured `safemode` at load time though a new system property - {pull}2165[#2165]